index.css
@import url(./vendor/normalize.css);
@import url(./vendor/fonts/fonts.css);

.page {
  background-color: #1e1e1e;
  min-width: 320px;
  max-width: 1140px;
  margin: 0 auto;
  padding: 61px 16px 20px 16px;
}

@media screen and (max-width: 1023px) {
  .page {
    box-sizing: border-box;
    padding: 0;
  }
}

.purple-ball {
  z-index: -1;
  border-radius: 50%;
  position: absolute;
  width: 60px;
  height: 60px;
  left: 868px;
  top: -2px;
  background: radial-gradient(
    64% 64% at 27.25% 26.5%,
    rgba(236, 208, 255, 0.64) 0%,
    rgba(161, 93, 207, 0.24) 59.67%,
    rgba(118, 49, 164, 0.208) 78.59%,
    rgba(86, 24, 128, 0.232) 100%
  );
  box-shadow: 3px 6px 27px -10px rgba(177, 118, 217, 0.25);
  filter: blur(5px);
  backdrop-filter: blur(2px);
}

@media screen and (max-width: 1023px) {
  .purple-ball {
    width: 40px;
    height: 40px;
    left: 296px;
    top: 291px;
  }
}

.red-ball-large {
  z-index: -1;
  border-radius: 50%;
  position: absolute;
  width: 83px;
  height: 83px;
  left: 519px;
  top: 83px;
  background: radial-gradient(
    64% 64% at 27.25% 26.5%,
    rgba(255, 208, 208, 0.536) 0%,
    rgba(212, 93, 93, 0.264) 59.67%,
    rgba(167, 49, 49, 0.248) 78.59%,
    rgba(130, 25, 25, 0.248) 100%
  );
  box-shadow: 3px 6px 27px -10px rgba(223, 125, 125, 0.25);
  backdrop-filter: blur(2px);
}

@media screen and (max-width: 1023px) {
  .red-ball-large {
    width: 43px;
    height: 43px;
    left: 29px;
    top: 457px;
  }
}

.red-ball-small {
  z-index: -1;
  border-radius: 50%;
  position: absolute;
  width: 28px;
  height: 28px;
  left: 851px;
  top: 547px;
  background: radial-gradient(
    64% 64% at 27.25% 26.5%,
    rgba(255, 208, 208, 0.48) 0%,
    rgba(212, 93, 93, 0.248) 59.67%,
    rgba(167, 49, 49, 0.264) 78.59%,
    rgba(130, 25, 25, 0.232) 100%
  );
  box-shadow: 3px 6px 27px -10px rgba(223, 125, 125, 0.25);
  filter: blur(2.5px);
  backdrop-filter: blur(2px);
}

@media screen and (max-width: 1023px) {
  .red-ball-small {
    width: 18px;
    height: 18px;
    left: 278px;
    top: 618px;
  }
}

.purple-light {
  z-index: -1;
  position: absolute;
  width: 259px;
  height: 259px;
  left: 602px;
  top: -154px;
  background: #833ab4;
  opacity: 0.5;
  filter: blur(196px);
}

@media screen and (max-width: 1023px) {
  .purple-light {
    left: 258px;
    top: 162px;
  }
}

.red-light {
  z-index: -1;
  position: absolute;
  width: 311px;
  height: 311px;
  left: -102px;
  top: 251px;
  background: #961a1a;
  opacity: 0.5;
  filter: blur(196px);
}

@media screen and (max-width: 1023px) {
  .red-light {
    width: 211px;
    height: 210px;
    left: -55px;
    top: 296px;
  }
}

.yellow-light {
  z-index: -1;
  display: none;
}

@media screen and (max-width: 1023px) {
  .yellow-light {
    display: block;
    position: absolute;
    width: 200px;
    height: 200px;
    left: -66px;
    top: 574px;
    background: #fcb045;
    opacity: 0.4;
    filter: blur(196px);
  }
}

.yellow-ball {
  z-index: -1;
  display: none;
}

@media screen and (max-width: 1023px) {
  .yellow-ball {
    display: block;
    position: absolute;
    width: 25px;
    height: 25px;
    left: 46px;
    top: 684px;
    transform: rotate(90deg);
  }
}

.glass {
  display: none;
  z-index: -1;
}

@media screen and (max-width: 1023px) {
  .glass {
    position: absolute;
    display: block;
    width: 320px;
    height: 445px;
    left: 0px;
    top: 55px;
    background: radial-gradient(
      238.53% 189.02% at 3.2% 3.49%,
      rgba(255, 246, 233, 0.1) 0%,
      rgba(26, 29, 35, 0.1) 26.62%,
      rgba(26, 29, 35, 0.1) 52.1%,
      rgba(26, 29, 35, 0.01) 70.17%,
      rgba(26, 29, 35, 0) 100%
    );
    backdrop-filter: blur(7.5px);
  }
}

.header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

@media screen and (max-width: 1023px) {
  .header {
    justify-content: center;
    width: 100%;
    height: 55px;
    background-color: #1e1e1e;
  }
}

.logo-wrapper {
  margin-top: -4px;
}

@media screen and (max-width: 1023px) {
  .logo-wrapper {
    display: none;
  }
}

.logo-description {
  font-family: 'Montserrat', Verdana, sans-serif;
  color: #e4e5ea;
  font-size: 10px;
  line-height: 10px;
  font-weight: 300;
  max-width: 160px;
  margin: 10px 0 0 0;
}

@media screen and (max-width: 1023px) {
  .header-nav {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
  }
}

.header-nav-links {
  display: flex;
  flex-direction: row;
  gap: 30px;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

@media screen and (max-width: 1023px) {
  .header-nav-links li:last-of-type {
    display: none;
  }
}

@media screen and (max-width: 1023px) {
  .header-nav-links {
    gap: 17px;
  }
}

.nav-link {
  font-family: 'Inter', Verdana, sans-serif;
  color: #e4e5ea;
  font-size: 16px;
  line-height: 19px;
  font-weight: 500;
  text-decoration: none;
  transition: opacity 0.4s linear;
}

.nav-link:hover {
  opacity: 0.8;
}

@media screen and (max-width: 1023px) {
  .nav-link {
    font-size: 12px;
    line-height: 14px;
    text-transform: uppercase;
  }
}

.contacts {
  display: flex;
  flex-direction: row;
  gap: 47px;
}

@media screen and (max-width: 1023px) {
  .contacts {
    display: none;
  }
}

.phone {
  font-family: 'Inter', Verdana, sans-serif;
  color: #e4e5ea;
  font-size: 16px;
  line-height: 19px;
  font-weight: 500;
  margin: 0;
  min-width: 143px;
}

.phone_position_footer {
  margin-bottom: 21px;
}

@media screen and (max-width: 1023px) {
  .phone_position_footer {
    margin-bottom: 8px;
  }
}

.sm-icons {
  display: flex;
  flex-direction: row;
  gap: 29px;
}

.sm-icons_position_footer {
  justify-content: flex-end;
  gap: 10px;
  margin-bottom: 14px;
}

@media screen and (max-width: 1023px) {
  .sm-icons_position_footer {
    justify-content: flex-start;
    margin-bottom: 9px;
    gap: 16px;
  }
}

.sm-icon {
  width: 20px;
  height: 20px;
  transition: opacity 0.4s linear;
}

.sm-icon:hover {
  opacity: 0.8;
}
/* ... */

